--- a/index.html
+++ b/index.html
@@ -1,123 +1,243 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KekebonKekepabon - Nutrition</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <header class="hero">
-        <div>
-        <img src="logo.png" alt="KekebonKekepabon Logo" class="logo">
-        <p>La nutrition saine et équilibrée à portée de main.</p>
-        <a href="#contact" class="cta-button">Nous contacter</a>
-    </div>
-    </header>
-    
-    <section>
-    <h2>Nos engagements</h2>
-        
-    <div class="features">
-        <div class="card">
-            <div class="card-inner">
-              <div class="card-front img4">
-                <div class="card-content">
-                  <h3>Produits de qualité</h3>
-                  <p>Nos produits sont rigoureusement ...</p>
-                </div>
-              </div>
-              <div class="card-back">
-                <p>Nos produits sont rigoureusement sélectionnés pour garantir une qualité nutritionnelle optimale et répondre aux besoins spécifiques de chacun. Élaborés avec des ingrédients naturels et sans additifs, ils allient plaisir et bienfaits pour la santé. Nous collaborons avec des experts en nutrition pour formuler des solutions adaptées aux dernières avancées scientifiques. Chaque produit est conçu pour vous accompagner vers un mode de vie sain, sans compromis sur le goût ni sur l’efficacité.</p>
-            </div>
-            </div>
-        </div>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>KekebonKekepabon - Nutrition</title>
+		<link rel="stylesheet" href="styles.css" />
+		<link rel="stylesheet" href="ibis.css" />
+	</head>
+	<body>
+		<header class="hero">
+			<div>
+				<img src="logo.png" alt="KekebonKekepabon Logo" class="logo" />
+				<p>La nutrition saine et équilibrée à portée de main.</p>
+				<a href="#contact" class="cta-button">Nous contacter</a>
+			</div>
+		</header>
+		<!--------------------------------------------------->
+		<!--------------------------------------------------->
+		<!--------------------------------------------------->
+		<!-- Mon code -->
 
-        <div class="card">
-            <div class="card-inner">
-              <div class="card-front img5">
-                <div class="card-content">
-                  <h3>Consultations personnalisées</h3>
-                  <p>Nos consultations sont entièrement ...</p>
-                </div>
-              </div>
-              <div class="card-back">
-                <p>Nos consultations sont entièrement adaptées à votre mode de vie, vos objectifs et vos besoins spécifiques. Nos experts en nutrition prennent le temps de comprendre votre alimentation et vos habitudes pour vous proposer un accompagnement sur mesure. Grâce à un suivi régulier, nous ajustons votre programme pour maximiser vos résultats et assurer votre bien-être à long terme. Notre approche bienveillante et éducative vous aide à adopter de bonnes habitudes alimentaires de manière progressive et durable.</p>
-            </div>
-            </div>
-        </div>
-    </div>    
- 
-    <div class="features">
-        <div class="card">
-            <div class="card-inner">
-              <div class="card-front img6">
-                <div class="card-content">
-                  <h3>Alimentation équilibrée</h3>
-                  <p>Adopter une alimentation équilibrée permet ...</p>
-                </div>
-              </div>
-              <div class="card-back">
-                <p>Adopter une alimentation équilibrée permet d’apporter à votre corps tous les nutriments essentiels pour fonctionner de manière optimale. Elle favorise une meilleure digestion, une énergie constante et une prévention efficace contre de nombreuses maladies. Une bonne alimentation contribue également à renforcer le système immunitaire et à améliorer la qualité du sommeil. En apprenant à mieux manger, vous gagnez en vitalité et en sérénité au quotidien.</p>
-            </div>
-            </div>
-        </div>
+			<h2>Nos recettes</h2>
 
-        <div class="card">
-            <div class="card-inner">
-              <div class="card-front img7">
-                <div class="card-content">
-                    <h3>Bien-être & Santé</h3>
-                    <p>Une alimentation saine et adaptée est ...</p>
-                </div>
-              </div>
-              <div class="card-back">
-                <p>Une alimentation saine et adaptée est l’un des piliers fondamentaux du bien-être physique et mental. Manger équilibré réduit le stress, améliore l’humeur et favorise une meilleure concentration. En prenant soin de votre alimentation, vous investissez dans votre santé sur le long terme et prévenez de nombreux troubles métaboliques. Se sentir bien dans son corps et dans son esprit commence par des choix alimentaires pertinents.</p>
-            </div>
-            </div>
-        </div>
-    </div>
-    </section>
+		<section id="recipe-container">
+			<article><label for="search-category">Rechercher par catégorie</label>
+			<select name="search-category" id="search-input">
+			<option value=""></option></select></article>
+			
+			
+			<article id="flex-div">
+			<input type="text" name="ingredient" id="ingredient-input" placeholder="Rechercher par ingrédient"/>
+			<button type="submit">Rechercher</button></article>
+			<article><label for="search-country">Rechercher par pays</label>
+			<select name="search-country" id="search-input">
+			<option value=""></option></select></article>
+			
+		</section>
 
+		<!--------------------------------------------------->
+		<!--------------------------------------------------->
+		<!---------------------------------------------------->
+		<section>
+			<h2>Nos engagements</h2>
 
-    <h2>FAQ</h2>
-    <section class="faq">
-        <details>
-            <summary>En quoi consiste l’accompagnement personnalisé ?</summary>
-            <p>Notre accompagnement personnalisé repose sur une approche sur mesure adaptée à vos besoins, vos objectifs et votre mode de vie. Nos experts en nutrition vous proposent un programme alimentaire spécifique, des conseils pratiques et un suivi régulier pour vous aider à atteindre vos objectifs de manière durable.</p>
-        </details>
-        <details>
-            <summary>Proposez-vous des consultations en ligne ?</summary>
-            <p>Oui, nous offrons des consultations en ligne pour vous permettre d’accéder à nos services où que vous soyez. Nos experts vous accompagnent via visioconférence ou appel téléphonique, avec le même niveau de personnalisation et d’efficacité qu’en consultation en présentiel.</p>
-        </details>
-        <details>
-            <summary>Comment se déroule une consultation ?</summary>
-            <p>Lors de votre première consultation, nous faisons un bilan détaillé de votre alimentation, de votre mode de vie et de vos objectifs. Ensuite, nous établissons ensemble un plan nutritionnel adapté, avec des conseils pratiques. Un suivi régulier est ensuite mis en place pour ajuster votre programme selon vos progrès et vos besoins.</p>
-        </details>
-        <details>
-            <summary>Quels sont les avantages de votre approche nutritionnelle ?</summary>
-            <p>Notre approche repose sur des recommandations scientifiquement validées et adaptées à votre quotidien. Nous privilégions une alimentation équilibrée et personnalisée plutôt que des régimes restrictifs. Notre objectif est de vous aider à adopter des habitudes alimentaires durables et bénéfiques pour votre santé.</p>
-        </details>
-        <details>
-            <summary>Puis-je bénéficier d’un suivi même après la fin de mon programme ?</summary>
-            <p>Oui, nous proposons des formules de suivi à long terme pour vous accompagner au-delà de votre programme initial. Ces suivis permettent d’assurer une transition en douceur et de maintenir vos résultats sur le long terme, en continuant à vous guider et à ajuster votre alimentation si nécessaire.</p>
-        </details>
-        <details>
-            <summary>Comment prendre rendez-vous pour une première consultation ?</summary>
-            <p>Vous pouvez prendre rendez-vous directement sur notre site via notre formulaire de réservation en ligne. Vous avez également la possibilité de nous contacter par téléphone ou par e-mail pour choisir l’horaire qui vous convient le mieux.</p>
-        </details>
-    </section>
+			<div class="features">
+				<div class="card">
+					<div class="card-inner">
+						<div class="card-front img4">
+							<div class="card-content">
+								<h3>Produits de qualité</h3>
+								<p>Nos produits sont rigoureusement ...</p>
+							</div>
+						</div>
+						<div class="card-back">
+							<p>
+								Nos produits sont rigoureusement sélectionnés
+								pour garantir une qualité nutritionnelle
+								optimale et répondre aux besoins spécifiques de
+								chacun. Élaborés avec des ingrédients naturels
+								et sans additifs, ils allient plaisir et
+								bienfaits pour la santé. Nous collaborons avec
+								des experts en nutrition pour formuler des
+								solutions adaptées aux dernières avancées
+								scientifiques. Chaque produit est conçu pour
+								vous accompagner vers un mode de vie sain, sans
+								compromis sur le goût ni sur l’efficacité.
+							</p>
+						</div>
+					</div>
+				</div>
 
-    <section id="contact">
-        <h3>Contactez-nous</h3>
-        <form>
-            <input type="text" placeholder="Votre nom" required>
-            <input type="email" placeholder="Votre email" required>
-            <textarea placeholder="Votre message" required></textarea>
-            <button type="submit">Envoyer</button>
-        </form>
-    </section>
+				<div class="card">
+					<div class="card-inner">
+						<div class="card-front img5">
+							<div class="card-content">
+								<h3>Consultations personnalisées</h3>
+								<p>Nos consultations sont entièrement ...</p>
+							</div>
+						</div>
+						<div class="card-back">
+							<p>
+								Nos consultations sont entièrement adaptées à
+								votre mode de vie, vos objectifs et vos besoins
+								spécifiques. Nos experts en nutrition prennent
+								le temps de comprendre votre alimentation et vos
+								habitudes pour vous proposer un accompagnement
+								sur mesure. Grâce à un suivi régulier, nous
+								ajustons votre programme pour maximiser vos
+								résultats et assurer votre bien-être à long
+								terme. Notre approche bienveillante et éducative
+								vous aide à adopter de bonnes habitudes
+								alimentaires de manière progressive et durable.
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
 
-</body>
-<script src="index.js"></script>
+			<div class="features">
+				<div class="card">
+					<div class="card-inner">
+						<div class="card-front img6">
+							<div class="card-content">
+								<h3>Alimentation équilibrée</h3>
+								<p>
+									Adopter une alimentation équilibrée permet
+									...
+								</p>
+							</div>
+						</div>
+						<div class="card-back">
+							<p>
+								Adopter une alimentation équilibrée permet
+								d’apporter à votre corps tous les nutriments
+								essentiels pour fonctionner de manière optimale.
+								Elle favorise une meilleure digestion, une
+								énergie constante et une prévention efficace
+								contre de nombreuses maladies. Une bonne
+								alimentation contribue également à renforcer le
+								système immunitaire et à améliorer la qualité du
+								sommeil. En apprenant à mieux manger, vous
+								gagnez en vitalité et en sérénité au quotidien.
+							</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="card">
+					<div class="card-inner">
+						<div class="card-front img7">
+							<div class="card-content">
+								<h3>Bien-être & Santé</h3>
+								<p>Une alimentation saine et adaptée est ...</p>
+							</div>
+						</div>
+						<div class="card-back">
+							<p>
+								Une alimentation saine et adaptée est l’un des
+								piliers fondamentaux du bien-être physique et
+								mental. Manger équilibré réduit le stress,
+								améliore l’humeur et favorise une meilleure
+								concentration. En prenant soin de votre
+								alimentation, vous investissez dans votre santé
+								sur le long terme et prévenez de nombreux
+								troubles métaboliques. Se sentir bien dans son
+								corps et dans son esprit commence par des choix
+								alimentaires pertinents.
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<h2>FAQ</h2>
+		<section class="faq">
+			<details>
+				<summary>
+					En quoi consiste l’accompagnement personnalisé ?
+				</summary>
+				<p>
+					Notre accompagnement personnalisé repose sur une approche
+					sur mesure adaptée à vos besoins, vos objectifs et votre
+					mode de vie. Nos experts en nutrition vous proposent un
+					programme alimentaire spécifique, des conseils pratiques et
+					un suivi régulier pour vous aider à atteindre vos objectifs
+					de manière durable.
+				</p>
+			</details>
+			<details>
+				<summary>Proposez-vous des consultations en ligne ?</summary>
+				<p>
+					Oui, nous offrons des consultations en ligne pour vous
+					permettre d’accéder à nos services où que vous soyez. Nos
+					experts vous accompagnent via visioconférence ou appel
+					téléphonique, avec le même niveau de personnalisation et
+					d’efficacité qu’en consultation en présentiel.
+				</p>
+			</details>
+			<details>
+				<summary>Comment se déroule une consultation ?</summary>
+				<p>
+					Lors de votre première consultation, nous faisons un bilan
+					détaillé de votre alimentation, de votre mode de vie et de
+					vos objectifs. Ensuite, nous établissons ensemble un plan
+					nutritionnel adapté, avec des conseils pratiques. Un suivi
+					régulier est ensuite mis en place pour ajuster votre
+					programme selon vos progrès et vos besoins.
+				</p>
+			</details>
+			<details>
+				<summary>
+					Quels sont les avantages de votre approche nutritionnelle ?
+				</summary>
+				<p>
+					Notre approche repose sur des recommandations
+					scientifiquement validées et adaptées à votre quotidien.
+					Nous privilégions une alimentation équilibrée et
+					personnalisée plutôt que des régimes restrictifs. Notre
+					objectif est de vous aider à adopter des habitudes
+					alimentaires durables et bénéfiques pour votre santé.
+				</p>
+			</details>
+			<details>
+				<summary>
+					Puis-je bénéficier d’un suivi même après la fin de mon
+					programme ?
+				</summary>
+				<p>
+					Oui, nous proposons des formules de suivi à long terme pour
+					vous accompagner au-delà de votre programme initial. Ces
+					suivis permettent d’assurer une transition en douceur et de
+					maintenir vos résultats sur le long terme, en continuant à
+					vous guider et à ajuster votre alimentation si nécessaire.
+				</p>
+			</details>
+			<details>
+				<summary>
+					Comment prendre rendez-vous pour une première consultation ?
+				</summary>
+				<p>
+					Vous pouvez prendre rendez-vous directement sur notre site
+					via notre formulaire de réservation en ligne. Vous avez
+					également la possibilité de nous contacter par téléphone ou
+					par e-mail pour choisir l’horaire qui vous convient le
+					mieux.
+				</p>
+			</details>
+		</section>
+
+		<section id="contact">
+			<h3>Contactez-nous</h3>
+			<form>
+				<input type="text" placeholder="Votre nom" required />
+				<input type="email" placeholder="Votre email" required />
+				<textarea placeholder="Votre message" required></textarea>
+				<button type="submit">Envoyer</button>
+			</form>
+		</section>
+	</body>
+	<script src="index.js"></script>
 </html>
