--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>KekebonKekepabon - Nutrition</title>
 		<link rel="stylesheet" href="styles.css" />
-		<link rel="stylesheet" href="ibis.css" />
 	</head>
 	<body>
 		<header class="hero">
@@ -15,31 +14,7 @@
 				<a href="#contact" class="cta-button">Nous contacter</a>
 			</div>
 		</header>
-		<!--------------------------------------------------->
-		<!--------------------------------------------------->
-		<!--------------------------------------------------->
-		<!-- Mon code -->
-
-			<h2>Nos recettes</h2>
-
-		<section id="recipe-container">
-			<article><label for="search-category">Rechercher par catégorie</label>
-			<select name="search-category" id="search-input">
-			<option value=""></option></select></article>
-			
-			
-			<article id="flex-div">
-			<input type="text" name="ingredient" id="ingredient-input" placeholder="Rechercher par ingrédient"/>
-			<button type="submit">Rechercher</button></article>
-			<article><label for="search-country">Rechercher par pays</label>
-			<select name="search-country" id="search-input">
-			<option value=""></option></select></article>
-			
-		</section>
-
-		<!--------------------------------------------------->
-		<!--------------------------------------------------->
-		<!---------------------------------------------------->
+		<a href="ibis.html">Découvrez nos recettes</a>
 		<section>
 			<h2>Nos engagements</h2>
 
@@ -239,5 +214,4 @@
 			</form>
 		</section>
 	</body>
-	<script src="index.js"></script>
 </html>
