--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				<a href="#contact" class="cta-button">Nous contacter</a>
 			</div>
 		</header>
-		<a href="ibis.html">Découvrez nos recettes</a>
+		<a href="/brief/index.html">Découvrez nos recettes</a>
 		<section>
 			<h2>Nos engagements</h2>
 
