finished search by ingredients

--- a/brief/index.html
+++ b/brief/index.html
@@ -13,16 +13,13 @@
 			<nav>
 				<ul>
 					<li>Accueil</li>
-					<li>Ingrédients</li>
-					<li>Catégories</li>
-					<li>Pays</li>
 				</ul>
 			</nav>
 		</header>
 		<main>
 			<h1>Nos recettes</h1>
 
-			<section id="recipe-container">
+			<section id="input-container">
 				<article>
 					<label for="search-category"
 						>Rechercher par catégorie</label
@@ -49,6 +46,7 @@
 					<select name="search-country" id="search-country"></select>
 				</article>
 			</section>
+			<div id="recipe-container"></div>
 		</main>
 	</body>
 	<script src="ingredient.js"></script>
