--- a/index.html
+++ b/index.html
@@ -9,12 +9,18 @@
 	<body>
 		<header class="hero">
 			<div>
-				<img src="logo.png" alt="KekebonKekepabon Logo" class="logo" />
+				<img
+					src="/assets/logo.png"
+					alt="KekebonKekepabon Logo"
+					class="logo"
+				/>
 				<p>La nutrition saine et équilibrée à portée de main.</p>
 				<a href="#contact" class="cta-button">Nous contacter</a>
 			</div>
 		</header>
-		<a href="/brief/index.html">Découvrez nos recettes</a>
+		<div id="brief-link">
+			<a href="/brief/index.html"><button id="brief-btn">Découvrez nos recettes</button></a>
+		</div>
 		<section>
 			<h2>Nos engagements</h2>
 
