--- a/brief/index.html
+++ b/brief/index.html
@@ -11,7 +11,7 @@
 		<link
 			rel="stylesheet"
 			href="desktop.css" />
-		<title>KekebonKekepabon - Recettes par ingrédients</title>
+		<title>Recettes par ingrédients</title>
 	</head>
 	<body>
 		<main>
